fix: dark mode

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,3 +8,10 @@ video {
 p {
   font-family: "Lato", sans-serif;
 }
+
+footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+}
